--- a/package.json
+++ b/package.json
@@ -65,6 +65,11 @@
     "last 2 versions",
     "not ie <= 8"
   ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "lint-staged": {
     "*.js": [
       "vue-cli-service lint",
