--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
   ],
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "hello world"
     }
   },
   "lint-staged": {
