Keep calm and commit

--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
   ],
   "husky": {
     "hooks": {
-      "pre-commit": "hello world"
+      "pre-commit": "lint-staged"
     }
   },
   "lint-staged": {
