--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "simplemde": "^1.11.2",
     "sortablejs": "^1.14.0",
     "tree-table-vue": "^1.1.0",
+    "uuid": "3.4.0",
     "v-org-tree": "^1.0.12",
     "vue": "^2.6.14",
     "vue-i18n": "^7.8.0",
