--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
     "husky": "^7.0.1",
+    "iview-loader": "^1.3.0",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "lint-staged": "^11.1.1",
